# LearningEnglishApkQML

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
android/: AndroidManifest.xml
android/assets/resources/: dictionary_level1.json  dictionary_level1.xml  dictionary_level2.json  dictionary_level2.xml  dictionary_level3.json  dictionary_level3.xml  dictionary_level4.json  dictionary_level4.xml  dictionary_level5.json  dictionary_level5.xml
include/: MainWindow.h  PracticeWindow.h
qml/: DifficultyWindow.qml  GameWindow.qml  Main.qml  MatchCards.qml  MemoryGame.qml  PracticeWindow.qml  qmldir
src/: MainWindow.cpp  PracticeWindow.cpp
